# finquery-streamlit

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
.github/workflows/: cicd.yml
data/: Finance Dataset Description.docx  sample_sales_data.csv
k8s/: deployment.yaml  hostpath-pv.yaml  hostpath-pvc.yaml  ingress.yaml  service.yaml
scripts/: create_db.sql
src/: app.py  plotly_agent.py  settings.py
src/finquery_streamlit/: app.py  db_agent.py  orchestrator.py  presentation_agent.py  settings.py
var/conf/finquery/: .env.dev  .env.dev.docker
